# digital-closet

./: .gitignore  AGENTS.md  GEMINI.md  README.md  TODO.md  docker-compose.yml  elasticmq.conf  package-lock.json
.sisyphus/: boulder.json
.sisyphus/notepads/update-master-plan/: learnings.md  notes-20260322.md
.sisyphus/plans/: iac-cloud-sam.md  local-s3-mock.md  phase-2-1-upload-flow.md  phase-2-2-ml-worker-detailed.md  phase-2-2-ml-worker-todos.md  phase-2-2-ml-worker.md  update-master-plan.md
api/: auth.py  config.py  database.py  db_models.py  dependencies.py  main.py  models.py  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: aceea3c2fbcf_add_core_tables.py  b246cda2c045_initial_migration.py
api/providers/: factory.py
api/providers/queue/: base.py  elasticmq.py
api/providers/storage/: base.py  minio.py
api/routers/: photos.py
api/tests/: test_pipeline.py
api/tests/assets/: test_image.HEIC  test_image_2.HEIC
docs/: MASTER_PLAN.md  high-level-design.md  local-setup.md  mvp-roadmap.md  project-overview.md  system-design.md
docs/llds/: api-gateway.md  inference-worker.md  mobile-client.md
docs/specs/: auth-specs.md  closet-management-specs.md  onboarding-specs.md  photo-processing-specs.md
mobile/: AGENTS.md  repomix-output.xml
mobile/DigitalCloset/: app.json  package-lock.json  package.json  tsconfig.json
mobile/DigitalCloset/app/: _layout.tsx
mobile/DigitalCloset/app/(auth)/: _layout.tsx  index.tsx  login.tsx  permissions.tsx  sign-in.tsx  sign-up.tsx  welcome.tsx
mobile/DigitalCloset/app/(home)/: _layout.tsx  index.tsx
mobile/DigitalCloset/app/(home)/(tabs)/: _layout.tsx  camera.tsx  closet.tsx  index.tsx
mobile/DigitalCloset/app/(home)/items/: [id].tsx  add.tsx
mobile/DigitalCloset/components/: AuthForm.tsx  SignInForm.tsx  SignUpForm.tsx
mobile/DigitalCloset/constants/: theme.ts
mobile/DigitalCloset/data/: mockItems.ts
mobile/DigitalCloset/patches/: @clerk+expo+3.1.4.patch
mobile/DigitalCloset/plugins/: withDisableUserScriptSandboxing.js
mobile/DigitalCloset/src/data/: mockItems.ts
mobile/DigitalCloset/src/lib/: token-cache.ts
tmp/: mobile-design-spec.md
worker/: README.md  main.py  ml_worker.py  pyproject.toml
