[project]
name = "digital-closet-api"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "chrisyecora",email = "chris.yecora@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "boto3 (>=1.42.72,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pgvector (>=0.3.6,<0.4.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
