[project]
name = "digital-closet-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "chrisyecora",email = "chris.yecora@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pillow",
    "numpy<2",
    "psycopg2-binary",
    "pgvector",
    "boto3",
    "python-dotenv",
    "torch (==2.2.2)",
    "torchvision (==0.17.2)",
    "ultralytics (>=8.4.26,<9.0.0)",
    "transformers (>=5.3.0,<6.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pillow-heif (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

