[project]
name = "digital-closet-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "chrisyecora",email = "chris.yecora@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pillow",
    "numpy<2",
    "psycopg2-binary",
    "pgvector",
    "boto3",
    "python-dotenv",
    "torch (==2.2.2)",
    "torchvision (==0.17.2)",
    "transformers (<4.40.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pillow-heif (>=1.3.0,<2.0.0)",
    "opencv-contrib-python (<4.11)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "scipy (>=1.17.1,<2.0.0)"
]
